test/expressions/lydia/noinit/arg.good
arg.chpl:3: syntax error: near 'noinit'
